--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,13 +1,13 @@
 <p id="currentItemOptions">
-  <%= link_to "+ Add Item", '#', id: 'add-item' %> |
-  <a href="<%= @item.parent_id %>">Go Up</a> <!-- not in rails link_to format..does it matter? -->
+  <%= link_to "+ Add Item", '#add-item-form', id: 'add-item' %> |
+  <a href="<%= @item.parent_id %>">Go Up</a>
 </p>
 
 <form id="item<%= @item.id %>">
   <h1><% if @item.task %><input type="checkbox" class="itemCheckbox"<% if @item.complete %> checked<% end %> disabled /><% end %><%= @item.title %></h1>
   <div class="itemOptions">
     <%= link_to '', edit_item_path(@item.id), class: 'edit itemEdit', title: 'Edit' %>
-    <a id="set-email" class="set-email" href="#" title="Set Email Reminder" name="<%= @item.id %>"></a>
+    <a class="set-email" href="#" title="Set Email Reminder" name="<%= @item.id %>"></a>
     <%= link_to '', item_path(@item.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p><%= raw(@item.body) %></p>
@@ -31,7 +31,7 @@
   <h2><% if child.task %><input type="checkbox" class="itemCheckbox"<% if child.complete %> checked<% end %> disabled /><% end %><%= link_to child.title, child %></h2>
   <div class="itemOptions">
     <%= link_to '', edit_item_path(child), class: 'edit itemEdit', title: 'Edit' %>
-    <a class="set-email" href="#" title="Set Email Reminder" name="<%= child.id %>"></a>
+    <a class="set-email" href="#item<%= child.id %>" title="Set Email Reminder" name="<%= child.id %>"></a>
     <%= link_to '', item_path(child.id), method: :delete, data: { confirm: 'Are you sure you want to delete this item?' }, class: 'delete itemDelete' %>
   </div>
   <p><%= raw(child.body) %></p>
