--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -52,21 +52,17 @@
 
 <% end %>
 <%= form_for(:item, url: items_path, html: {id: "add-item-form"}) do |f| %>
-  <%= f.label :title %>
+  <%= f.label :title, 'Title:' %>
   <%= f.text_field :title, required: true, value: '' %>
-
-  <%= f.label :body %>
-  <%= f.text_field :body, required: true, value: '' %>
-
+  <%= f.label :body, 'Body:' %>
+  <%= f.text_area :body, required: true, :placeholder => 'HTML tags are allowed!', value: '' %>
   <%= f.label :task, 'Set As Task?' %>
-  <%= f.check_box :task, value: '' %>
-
+  <%= f.check_box :task %>
   <%= hidden_field_tag 'item[parent_id]', @item.id %>
-  
-  <div class="newFormOptions">
-    <%= f.submit "Confirm Item" %> | 
-    <%= link_to "Clear", '#', id: "add-item-clear" %> | 
-	<%= link_to "Cancel", '#', id: "add-item-cancel" %>
+  <div class = "formOptions">
+    <%= f.submit "Confirm Item", class: "button" %> 
+	<%= f.submit "Clear", type: "reset", class: "button" %>
+	<input type="button" class="button" value="Cancel" onClick="history.go(-1); return true;" />
   </div>
 <% end %>
 
