Email form done

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -359,10 +359,37 @@ h3 {
 	vertical-align: top;
 }
 
+#leftEmailPane {
+	width: 180px;
+	float: left;
+}
+
+#rightEmailPane {
+	margin-left: 200px;
+	margin-top: 5px;
+	width: 480px;
+	min-height: 60px;
+}
+
+#datepicker {
+	margin-left: 10px;
+	margin-bottom: 10px;
+	width: 80px;
+}
+
+#trigger_email_email_id {
+	margin-top: 5px;
+	width: 100%;
+}
+
 .formOptions {
 	width: 235px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.emailForm {
+	width: 265px;
 }
 
 .button {
@@ -391,14 +418,6 @@ h3 {
 
 .button:hover {
    color: #FFFFFF;
-}
-
-#datepicker {
-	margin-left: 47px;
-}
-
-#emailrecip {
-	margin-left: 6px;
 }
 
 /* formating link hover colours */
