Add Email form formatting

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -142,14 +142,6 @@ ul {
 	list-style-type: circle;
 }
 
-.indent { /* unused - set to delete if we don't get around to it */
-	list-style-type: none;
-}
-
-.currentItemPath { /* unused - set to delete if we don't get around to it */
-	list-style-type: disc;
-}
-
 /* css for main content pain and forms */
 
 h1 {
@@ -386,14 +378,14 @@ h3 {
 	width: 100%;
 }
 
-.formOptions {
-	width: 300px;
-	margin-left: auto;
-	margin-right: auto;
+#email_email {
+	width: 90%;
+	margin-left: 21px;
+	margin-bottom: 15px;
 }
 
-.emailForm {
-	width: 265px;
+.formOptions {
+	text-align: center;
 }
 
 .button {
