--- a/app/views/emails/new.html.erb
+++ b/app/views/emails/new.html.erb
@@ -2,9 +2,9 @@
 
 <%= form_for(:email, url: emails_path, html: {class: "formCSS"}) do |f| %>
   <%= f.label :email, 'Email:' %>
-  <%= f.text_field :email, required: true %>
+  <%= f.text_field :email, required: true, pattern: '[^@]+@[^@]+\.[a-zA-Z]{2,6}', placeholder: 'example@example.com' %>
   <div class = "formOptions">
-    <%= f.submit "Confirm Item", class: "button" %> 
+    <%= f.submit "Add Email", class: "button" %> 
     <input type="button" class="button" value="Cancel" onClick="history.go(-1); return true;" />
   </div>
 <% end %>
