--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,7 +24,7 @@
   </p>
   <div class = "emailOptions">
     <a class = "edit emailEdit" href = "#" title = "Edit"></a> <!-- TODO, edit email triggers -->
-    <a class = "delete emailDelete" href = "#" title = "Delete"></a> <!-- TODO, delete email triggers -->
+	<%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete emailDelete', title: 'Delete' %>
   </div>
   <% end %>
   <% end %>
@@ -48,7 +48,7 @@
   </p>
   <div class = "emailOptions">
     <a class = "edit emailEdit" href = "#" title = "Edit"></a> <!-- TODO, edit email triggers -->
-    <a class = "delete emailDelete" href = "#" title = "Delete"></a> <!-- TODO, delete email triggers -->
+    <%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete emailDelete', title: 'Delete' %>
   </div>
   <% end %>
   <% end %>
@@ -73,13 +73,13 @@
 
 <%= form_tag({:controller => 'triggers', :action => 'create'}, {:id => "set-email-form"}) do %>
   <div id="leftEmailPane">
-    <%= label_tag(:datepicker, "Date:") %>
-    <%= text_field_tag(:datepicker) %> <small> at 0:00</small><br />
-    <%= label_tag(:emailchildren, "Send all subchildren too?") %>
+    <%= label_tag :datepicker, 'Date:' %>
+    <%= text_field_tag (:datepicker), '', {required: true, pattern: '(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d'} %> <small> at 0:00</small><br />
+    <%= label_tag :emailchildren, 'Send all subchildren too?' %>
     <%= check_box_tag(:emailchildren) %><%= hidden_field_tag(:parent_id, "") %>
   </div>
   <div id="rightEmailPane">
-    <%= label_tag(:emailrecip, "Recipients:") %>
+    <%= label_tag :emailrecip, 'Recipients:' %>
     <%= collection_select(:trigger_email, :email_id, Email.all, :id, :email, { :multiple => true }) %>
   </div>
   <div class = "formOptions">
