Fixed the email reminder paragraph formatting

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -162,6 +162,7 @@ h2 {
 
 .emailReminder {
 	color: red;
+	width: 90%;
 }
 
 #itemToRoot, #currentItemOptions, #newEmail {
@@ -364,7 +365,6 @@ h3 {
 	margin-left: 200px;
 	margin-top: 5px;
 	width: 480px;
-	min-height: 60px;
 }
 
 #datepicker {
@@ -377,6 +377,8 @@ h3 {
 	margin-top: 5px;
 	margin-bottom: 15px;
 	width: 100%;
+	height: 100px;
+	resize: vertical;
 }
 
 #email_email {
