Added time along with the date in email reminders

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -357,20 +357,20 @@ h3 {
 }
 
 #leftEmailPane {
-	width: 180px;
+	width: 190px;
 	float: left;
 }
 
 #rightEmailPane {
-	margin-left: 200px;
+	margin-left: 208px;
 	margin-top: 5px;
-	width: 480px;
+	width: 470px;
 }
 
-#datepicker {
+#datetimepicker {
 	margin-left: 10px;
 	margin-bottom: 10px;
-	width: 80px;
+	width: 100px;
 }
 
 #trigger_email_email_id {
@@ -452,3 +452,17 @@ footer {
 	text-align: center;
 	font-size: 11px;
 }
+
+/* css for timepicker: http://trentrichardson.com/examples/timepicker/ */
+
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { float: left; clear:left; padding: 0 0 0 5px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 45%; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+
+.ui-timepicker-rtl{ direction: rtl; }
+.ui-timepicker-rtl dl { text-align: right; padding: 0 5px 0 0; }
+.ui-timepicker-rtl dl dt{ float: right; clear: right; }
+.ui-timepicker-rtl dl dd { margin: 0 45% 10px 10px; }
