--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "http://code.jquery.com/jquery-1.10.1.min.js" %>
   <%= javascript_include_tag "http://code.jquery.com/ui/1.10.3/jquery-ui.js" %>
+  <%= javascript_include_tag "jquery-ui-timepicker-addon" %>
   <%= csrf_meta_tag %>
 </head>
 <body>
