Added link to original swedish club wa website in footer

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -453,6 +453,10 @@ footer {
 	font-size: 11px;
 }
 
+#footLink {
+	color: #999999;
+}
+
 /* css for timepicker: http://trentrichardson.com/examples/timepicker/ */
 
 .ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
