--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
     </div>
   </div>
   <footer>
-    <p>&copy; 2013 Swedish Club of WA - Website Created by CITS3200 Group G</p>
+    <p>&copy; 2013 <%= link_to "Swedish Club of WA", "http://www.swedishclubofwa.org/", id: "footLink" %> - Website Created by CITS3200 Group G</p>
   </footer>
 </body>
 </html>
