Added current time tab to the header

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -53,7 +53,33 @@ header {
 	color: #000000;
 }
 
+#timeTab {
+	float: left;
+	margin-left: 440px;
+	margin-top: 5px;
+	font-size: 10px;
+	color: #666666;
+}
+
+#logoutTab {
+	height: 30px; 
+	width: 84px; 
+	background: #FFFFFF; 
+	margin-top: 55px;
+	margin-left: 865px;
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
+}
+
+#logout {
+	font-size: 14px;
+	padding-top: 5px;
+	padding-left: 15px;
+}
+
 /* css for content formatting */
+
 #main {
 	padding-left: 18px;
 	padding-top: 5px;
@@ -81,23 +107,6 @@ header {
 	padding-right: 15px;
 	width: 165px;
 	border-right: 1px solid;
-}
-
-#logoutTab {
-	height: 30px; 
-	width: 84px; 
-	background: #FFFFFF; 
-	margin-top: 55px;
-	margin-left: 865px;
-	border-top-left-radius: 7px;
-	border-top-right-radius: 7px;
-	box-shadow: rgb(0, 0, 0) 1px 1px 4px 0px;
-}
-
-#logout {
-	font-size: 14px;
-	padding-top: 5px;
-	padding-left: 15px;
 }
 
 /* log in form formatting */
