--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= link_to items_path do %><p id="title1">Swedish Club of WA</p>
         <p id="title2"><i>Club Process System</i></p><% end %>
       </div>
+	  <div id="timeTab">The current time in Perth is <%= Time.now.strftime("%H:%M %d/%m/%Y") %></div>
       <div id="logoutTab">
         <p id="logout"><%= link_to "Log Out", signout_path, method: "delete" %></p>
       </div>
