--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title> Club Process System - Swedish Club of WA </title>
+  <%= favicon_link_tag 'favicon.ico' %>
   <%= stylesheet_link_tag "application" %>
   <%= stylesheet_link_tag "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" %>
   <%= javascript_include_tag "application" %>
