--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,11 +11,13 @@
   <p><%= raw(child.body) %></p>
   <% unless child.triggers.empty? %>
   <% child.triggers.each do |trigger| %> 
+  <% unless trigger.date_trigger < Time.now %>
   <p class = "emailReminder">Email to <% trigger.emails.each_with_index do |email, n| %><% if n != 0 %>, <% end %><%= email.email %><% end %> on <%= trigger.date_trigger.strftime("%d/%m/%Y %H:%M") %> AWST</p>
   <div class = "emailOptions">
     <a class = "edit emailEdit" href = "#" title = "Edit"></a> <!-- TODO, edit email triggers -->
     <%= link_to '', {:controller => 'triggers', :action => 'destroy', :id => trigger.id}, method: :delete, data: { confirm: 'Are you sure you want to cancel this email reminder?' }, class: 'delete emailDelete', title: 'Delete' %>
   </div>
+  <% end %>
   <% end %>
   <% end %>
 </form>
