--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for(:item, url: items_path, html: {class: "formCSS"}) do |f| %>
   <%= f.label :title, 'Title:' %>
-  <%= f.text_field :title, required: true %>
+  <%= f.text_field :title, required: true, maxlength: 100 %>
   <%= f.label :body, 'Body:' %>
   <%= f.text_area :body, required: true, :placeholder => 'HTML tags are allowed!' %>
   <%= f.label :task, 'Set As Task?' %>
